# audio-api

./: .pre-commit-config.yaml  .toml-sort.toml  README.md  alembic.ini  docker-compose.yml  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
app/: main.py
app/api/v1/: audio.py
app/api/v1/admin/: users.py
app/api/v1/audio/: get_file.py  upload_file.py
app/api/v1/auth/: auth_token.py  me.py  register.py  yandex_auth.py
app/auth/: auth.py  token_schema.py  yandex_auth.py
app/core/: config.py  custom_logging.py  rate_limiting.py
app/db/: session.py
app/models/: __init__.py  audiofiles.py  base.py  timestamp.py  user_audio.py  users.py
app/schemas/: __init__.py  association.py  audiofile.py  user.py
migrations/: env.py
migrations/versions/: 08d471d75731_add_user_audio_association_table.py  3e0211f260db_add_audio_files_table.py  748f46223309_add_users_table.py  8082114d2043_add_audio_files_table.py  9b138dc88f7f_add_user_audio_association_table.py  b13036087742_add_users_table.py
tests/: conftest.py
user/: create.py  get.py  user.py
