[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = ["sqlalchemy.ext.mypy.plugin"]
python_version = "3.12"
warn_return_any = false
warn_unused_configs = false
disallow_untyped_defs = false

[tool.poetry]
name = "DMVALED AUDIO API"
version = "0.1.0"
description = "FastAPI service for audio file uploads"
authors = ["Dmitrii Valedinskii <dmvaled@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
alembic = "^1.14.0"
asyncpg = "^0.30.0"
bcrypt = "^3.2.0"
databases = "^0.9.0"
fastapi = "^0.115.6"
fastapi-limiter = "^0.1.6"
gunicorn = "23.0.0"
passlib = "^1.7.4"
pyjwt = "^2.10.1"
pydantic = {version = "2.8.2", extras = ["email"]}
pydantic-settings = "2.4.0"
pydantic-extra-types = "^2.10.2"
python-multipart = "^0.0.20"
redis = "^5.0.0"
sqlalchemy = {extras = ["mypy"], version = "^2.0.37"}
uvicorn = {extras = ["standard"], version = "^0.34.0"}
authlib = "^1.5.1"
itsdangerous = "^2.2.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.14.1"
pre-commit = "^4.0.1"
ruff = "^0.11.2"
types-passlib = "^1.7.7.20241221"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.3"
mkdocs-material = "^9.4.1"
mkdocstrings = "^0.24.0"
mkdocstrings-python = "^1.8.0"

[tool.poetry.group.monitoring.dependencies]
opentelemetry-instrumentation-fastapi = "^0.43b0"
prometheus-client = "^0.20.0"

[tool.poetry.group.test.dependencies]
aioresponses = "^0.7.8"
factory-boy = "^3.3.0"
faker = "^25.0.0"
fakeredis = "^2.21.1"
httpx = "^0.28.1"
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"
pytest-cov = "^5.0.0"
pytest-env = "^1.1.5"
testcontainers = "^4.9.2"

[tool.poetry.scripts]
start = "uvicorn app.main:app --host 0.0.0.0 --port 8000"
prod = "gunicorn -k uvicorn.workers.UvicornWorker app.main:app"
lint = "ruff check ."
format = "ruff format ."
fix = "ruff check --fix ."
check = "ruff check --format=github ."
serve-docs = "mkdocs serve"
